--- a/hdbpudan/page2/index.html
+++ b/hdbpudan/page2/index.html
@@ -26,7 +26,7 @@
                class="cake"
                />
           <img src="img/pudan.jpg" alt="Foto" class="taaImg" />
-          <h2 class="happy">Happy Birthday to Sarah!!</h2>
+          <h2 class="happy">Happy Birthday to Pudanku!!</h2>
         </div>
         <div class="cardInside">
           <h3 class="back">HAPPY BIRTHDAY Pudan!</h3>
@@ -34,7 +34,7 @@
           <p>
            Selamat ulang tahun untuk pasangan yang sangat kusayangi dan kucintai. Semoga di hari istimewa ini, kamu merasa dihargai dan dikelilingi oleh kebahagiaan dan kebaikan. Aku bersyukur bahwa aku diberikan kesempatan untuk merayakan hari spesialmu bersamamu🎉🎂❤️🥂
           </p>
-          <p>Selamat Ulang Tahun Sayang</p>
+          <p>Selamat Ulang Tahun Pudanku Sayang</p>
           <br><br><center><button class="goToPage" onclick="goToPage()">🥳</button></center>
         </div>
       </div>
